chore: 删除 C 语言学习chore:代码
- 移除了 C 文件 删除 C 语言学习夹下的所有学习代码文件
-代码

- 移除了 C 文件 更新了 .vscode/settings.json，夹下的所有学习代码文件
-添加 algorithm 头文件的 C++ 更新了 .vscode/settings.json， 语言关联

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
     "stdio.h": "c",
     "array": "cpp",
     "string_view": "cpp",
-    "*.cpp#nan,1": "c"
+    "*.cpp#nan,1": "c",
+    "algorithm": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
