Remove unused sorting algorithms and related files; update VSCode settings to include 'queue' in C++ language associations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,8 @@
     "array": "cpp",
     "string_view": "cpp",
     "*.cpp#nan,1": "c",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "queue": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
