--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
     "string_view": "cpp",
     "*.cpp#nan,1": "c",
     "algorithm": "cpp",
-    "queue": "cpp"
+    "queue": "cpp",
+    "random": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
