chorechore:: 删除旧代码并更新 删除旧代码并更新 VSCode 配置
- 删除 VSCode 配置

- 删除了多个旧的 C++ 和 Python了多个旧的 C++ 和 Python 代码文件
- 更新了 . 代码文件
- 更新了 .vscode/launch.json，添加了vscode/launch.json，添加了 C++ 调试配置
 C++ 调试配置
- 在 .vscode/settings.json 中- 在 .vscode/settings.json 中添加了新的 C++ 相关添加了新的 C++ 相关设置
设置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,9 @@
     "stdio.h": "c",
     "array": "cpp",
     "string_view": "cpp",
-    "*.cpp#nan,1": "c"
+    "*.cpp#nan,1": "c",
+    "related_function": "cpp",
+    "numeric": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
