--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,94 +1,10 @@
 {
-  "files.associations": {
-    "*.cpp": "cpp",
-    "cmath": "cpp",
-    "ostream": "cpp",
-    "atomic": "cpp",
-    "bit": "cpp",
-    "cctype": "cpp",
-    "clocale": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cwchar": "cpp",
-    "exception": "cpp",
-    "initializer_list": "cpp",
-    "iomanip": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "iostream": "cpp",
-    "istream": "cpp",
-    "iterator": "cpp",
-    "limits": "cpp",
-    "list": "cpp",
-    "memory": "cpp",
-    "new": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "string": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "typeinfo": "cpp",
-    "unordered_map": "cpp",
-    "utility": "cpp",
-    "vector": "cpp",
-    "xfacet": "cpp",
-    "xhash": "cpp",
-    "xiosbase": "cpp",
-    "xlocale": "cpp",
-    "xlocinfo": "cpp",
-    "xlocmon": "cpp",
-    "xlocnum": "cpp",
-    "xloctime": "cpp",
-    "xmemory": "cpp",
-    "xstddef": "cpp",
-    "xstring": "cpp",
-    "xtr1common": "cpp",
-    "xutility": "cpp",
-    "stdio.h": "c",
-    "array": "cpp",
-    "string_view": "cpp",
-    "*.cpp#nan,1": "c",
-<<<<<<< HEAD
-    "related_function": "cpp",
-    "numeric": "cpp",
-    "any": "cpp",
-    "*.tcc": "cpp",
-    "forward_list": "cpp",
-    "unordered_set": "cpp",
-    "expected": "cpp",
-    "optional": "cpp",
-    "fstream": "cpp",
-    "future": "cpp",
-    "shared_mutex": "cpp",
-    "spanstream": "cpp",
-    "sstream": "cpp",
-    "stacktrace": "cpp",
-    "stop_token": "cpp",
-    "syncstream": "cpp",
-    "thread": "cpp",
-    "functional": "cpp",
-    "regex": "cpp",
-    "valarray": "cpp",
-    "variant": "cpp"
-=======
-    "algorithm": "cpp",
-    "queue": "cpp",
-    "random": "cpp"
->>>>>>> 3eceba873e4e096e38c0c48e75a442e8e57cfbcb
-  },
+  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat",
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
   "C_Cpp_Runner.cStandard": "",
   "C_Cpp_Runner.cppStandard": "",
-  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat",
   "C_Cpp_Runner.useMsvc": false,
   "C_Cpp_Runner.warnings": [
     "-Wall",
@@ -139,5 +55,8 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "iostream": "cpp"
+  }
 }
