chore: 更新 VSCode 设置和修复 sort_binary.cpp 代码格式
- 在 VSCode 设置中新增了对多个 C++ 文件类型的关联，提升了代码编辑体验。
- 修复了 sort_binary.cpp 文件中代码行末尾的多余字符，提升了代码的整洁性和可读性。
- 更新了数据库文件以保持一致性。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,8 +57,20 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
+    "*.asm": "assembly",
     "iostream": "cpp",
     "*.tcc": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "deque": "cpp",
+    "initializer_list": "cpp",
+    "list": "cpp",
+    "queue": "cpp",
+    "random": "cpp",
+    "type_traits": "cpp",
+    "vector": "cpp",
+    "xhash": "cpp",
+    "xstring": "cpp",
+    "xtree": "cpp",
+    "xutility": "cpp"
   }
 }
